--- a/QuantumWiki16/Views/User/Index.cshtml
+++ b/QuantumWiki16/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IQueryable<User>
 
-<h2>Index page</h2>
+<h2>List all users info for Admins only</h2>
 <div>
     @foreach (User u in Model)
     {
