--- a/QuantumWiki16/Views/Home/Index.cshtml
+++ b/QuantumWiki16/Views/Home/Index.cshtml
@@ -6,15 +6,13 @@
 <div class="text-center">
     <h1 class="display-3">Welcome to QuantumWiki</h1>
     <h4 class="bg bg-light">A site by Greg Bystroff</h4>
-    <div>
+    <div class="float-left">
         To add a user, <button><a asp-controller="User" asp-action="Login"> Login </a></button> @*controller name and method  must be spelled correctly *@
     </div>
-    <div>
+    <div class="float-left align-items-lg-stretch">
         To see the entire, <button><a asp-controller="User" asp-action="Index"> List of users </a></button>@*controller name and method  must be spelled correctly *@
     </div>
-    <div>
+    <div class="float-right align-items-lg-stretch">
         You can, <button><a asp-controller="User" asp-action="Search"> Search </a> </button>for a user by name. @*controller name and method  must be spelled correctly *@
     </div>
-
-    <h4>Use the buttons in the header for now.</h4>
 </div>
