--- a/QuantumWiki16/Views/User/Login.cshtml
+++ b/QuantumWiki16/Views/User/Login.cshtml
@@ -1,10 +1,10 @@
 ﻿@model User
-<h1>This will be the login page</h1>
-<h5>Sign up - Create.cshtml </h5>
-<h5>Log in - undefined </h5>
+<h1>Please log in to QuantumWiki</h1>
 
 <div>
     <form method="post">
+        @ViewBag.ErrorMessage
+        <br />
         Email/Username: <input asp-for="Email" placeholder="Your EMail Address" title="Email Address" />
         Password: <input asp-for="Password" placeholder="Your Password" title="Password" />
         <button type="submit"> Login </button>
