--- a/QuantumWiki16/Views/_ViewImports.cshtml
+++ b/QuantumWiki16/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using QuantumWiki16
 @using QuantumWiki16.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IUserRepository UserRepo
