--- a/QuantumWiki16/Views/Home/Index.cshtml
+++ b/QuantumWiki16/Views/Home/Index.cshtml
@@ -13,6 +13,6 @@
         To see the entire, <button><a asp-controller="User" asp-action="Index"> List of users </a></button>@*controller name and method  must be spelled correctly *@
     </div>
     <div class="float-right align-items-lg-stretch">
-        You can, <button><a asp-controller="User" asp-action="Search"> Search </a> </button>for a user by name. @*controller name and method  must be spelled correctly *@
+        You can, <button><a asp-controller="User" asp-action="SearchByEmail"> Search by Email </a> </button>for a user by name. @*controller name and method  must be spelled correctly *@
     </div>
 </div>
