--- a/QuantumWiki16/Views/Shared/_Layout.cshtml
+++ b/QuantumWiki16/Views/Shared/_Layout.cshtml
@@ -22,13 +22,13 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">QuantumWiki Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Tutorial" asp-action="Index">Browse as Guest</a>
+                            <a class="nav-link text-dark" asp-controller="User" asp-action="LoginAsGuest">Browse as Guest</a>
                         </li>
                     </ul>
                 </div>
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse float-sm-right">
                     <ul>
-                        @if (UserRepo.GetUserBySessionId() >= 0)
+                        @if (UserRepo.GetUserBySessionId() > 0)
                         {
                             <li class="nav-item alert-success">
                                 @UserRepo.GetUserById(UserRepo.GetUserBySessionId()).Email
